# cursera-yellow

./: CMakeLists.txt  FindStartWith.h  buse_decomposition.h  condition_parser.cpp  condition_parser.h  database.cpp  database.h  date.cpp  date.h  main.cpp  mergeSort2.h  mergeSort3.h  node.h  numeric_expression.h  phone_number.cpp  phone_number.h  sum_reverse_sort.cpp  sum_reverse_sort.h  test.cpp  test_framework.h  what need for backedn.txt
Weak2/BusDecomp/: CMakeLists.txt  buse_decomposition.h  main.cpp  test.cpp
Weak2/IsPolyndromTest/: test.cpp
Weak2/RationalTest/: test.cpp
Weak3/MergeSort/: mergeSort2.h  test.cpp
Weak3/Permutation/: main.cpp
Weak3/PersonStatistics/: CMakeLists.txt  main.cpp  person.cpp  person.h
Weak3/PhoneNumber/: phone_number.cpp  phone_number.h  test.cpp
Weak3/expression/: main.cpp  numeric_expression.h
Weak3/sort_reverse_sum/: sum_reverse_sort.cpp  test.cpp
Weak4/MergeSort/: CMakeLists.txt  main.cpp  mergeSort3.h
Weak4/StringOnPrefix/: main.cpp
Weak4/expression/: Loconic_numeric_expression.h  test.cpp
Weak5/figures_hierarchy/: main.cpp
Weak5/mans_refactoring/: hpp.hpp
curse_work/: condition_parser.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  token.cpp
think/: snipets.txt
